qt6/gen_qdatetimeedit.h

class QCalendar;
class QDate;
class QDateTime;
class QDateTimeEdit;
class QMetaObject;
class QTime;
class QWidget;
typedef struct QActionEvent QActionEvent;
typedef struct QCalendar QCalendar;
typedef struct QChildEvent QChildEvent;
typedef struct QDate QDate;
typedef struct QDateEdit QDateEdit;
typedef struct QDateTime QDateTime;
typedef struct QDateTimeEdit QDateTimeEdit;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QShowEvent QShowEvent;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTime QTime;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWidget QWidget;
bool QDateEdit_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* event);
bool QDateEdit_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_mouseMoveEvent(void* self, QMouseEvent* event);
bool QDateEdit_override_virtual_timerEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QDateEdit_override_virtual_showEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_showEvent(void* self, QShowEvent* event);
bool QDateEdit_override_virtual_devType(void* self, intptr_t slot);
int QDateEdit_virtualbase_devType(const void* self);
bool QDateEdit_override_virtual_setVisible(void* self, intptr_t slot);
void QDateEdit_virtualbase_setVisible(void* self, bool visible);
bool QDateEdit_override_virtual_heightForWidth(void* self, intptr_t slot);
int QDateEdit_virtualbase_heightForWidth(const void* self, int param1);
bool QDateEdit_override_virtual_hasHeightForWidth(void* self, intptr_t slot);
bool QDateEdit_virtualbase_hasHeightForWidth(const void* self);
bool QDateEdit_override_virtual_paintEngine(void* self, intptr_t slot);
QPaintEngine* QDateEdit_virtualbase_paintEngine(const void* self);
bool QDateEdit_override_virtual_mouseDoubleClickEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_mouseDoubleClickEvent(void* self, QMouseEvent* event);
bool QDateEdit_override_virtual_enterEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_enterEvent(void* self, QEnterEvent* event);
bool QDateEdit_override_virtual_leaveEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_leaveEvent(void* self, QEvent* event);
bool QDateEdit_override_virtual_moveEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_moveEvent(void* self, QMoveEvent* event);
bool QDateEdit_override_virtual_tabletEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_tabletEvent(void* self, QTabletEvent* event);
bool QDateEdit_override_virtual_actionEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_actionEvent(void* self, QActionEvent* event);
bool QDateEdit_override_virtual_dragEnterEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_dragEnterEvent(void* self, QDragEnterEvent* event);
bool QDateEdit_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* event);
bool QDateEdit_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* event);
bool QDateEdit_override_virtual_dropEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QDateEdit_override_virtual_nativeEvent(void* self, intptr_t slot);
bool QDateEdit_virtualbase_nativeEvent(void* self, struct miqt_string eventType, void* message, intptr_t* result);
bool QDateEdit_override_virtual_metric(void* self, intptr_t slot);
int QDateEdit_virtualbase_metric(const void* self, int param1);
bool QDateEdit_override_virtual_initPainter(void* self, intptr_t slot);
void QDateEdit_virtualbase_initPainter(const void* self, QPainter* painter);
bool QDateEdit_override_virtual_redirected(void* self, intptr_t slot);
QPaintDevice* QDateEdit_virtualbase_redirected(const void* self, QPoint* offset);
bool QDateEdit_override_virtual_sharedPainter(void* self, intptr_t slot);
QPainter* QDateEdit_virtualbase_sharedPainter(const void* self);
bool QDateEdit_override_virtual_inputMethodEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_inputMethodEvent(void* self, QInputMethodEvent* param1);
bool QDateEdit_override_virtual_eventFilter(void* self, intptr_t slot);
bool QDateEdit_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QDateEdit_override_virtual_childEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_childEvent(void* self, QChildEvent* event);
bool QDateEdit_override_virtual_customEvent(void* self, intptr_t slot);
void QDateEdit_virtualbase_customEvent(void* self, QEvent* event);
bool QDateEdit_override_virtual_connectNotify(void* self, intptr_t slot);
void QDateEdit_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QDateEdit_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QDateEdit_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QDateEdit_staticMetaObject();
void QDateEdit_delete(QDateEdit* self);