qt6/gen_qdatetimeedit.nim

proc fQDateEdit_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_mouseReleaseEvent".}
proc fcQDateEdit_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_mouseReleaseEvent".}
proc fQDateEdit_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_mouseMoveEvent".}
proc fcQDateEdit_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_mouseMoveEvent".}
proc fQDateEdit_virtualbase_timerEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_timerEvent".}
proc fcQDateEdit_override_virtual_timerEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_timerEvent".}
proc fQDateEdit_virtualbase_showEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_showEvent".}
proc fcQDateEdit_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_showEvent".}
proc fQDateEdit_virtualbase_devType(self: pointer, ): cint{.importc: "QDateEdit_virtualbase_devType".}
proc fcQDateEdit_override_virtual_devType(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_devType".}
proc fQDateEdit_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QDateEdit_virtualbase_setVisible".}
proc fcQDateEdit_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_setVisible".}
proc fQDateEdit_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QDateEdit_virtualbase_heightForWidth".}
proc fcQDateEdit_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_heightForWidth".}
proc fQDateEdit_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QDateEdit_virtualbase_hasHeightForWidth".}
proc fcQDateEdit_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_hasHeightForWidth".}
proc fQDateEdit_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QDateEdit_virtualbase_paintEngine".}
proc fcQDateEdit_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_paintEngine".}
proc fQDateEdit_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_mouseDoubleClickEvent".}
proc fcQDateEdit_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_mouseDoubleClickEvent".}
proc fQDateEdit_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_enterEvent".}
proc fcQDateEdit_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_enterEvent".}
proc fQDateEdit_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_leaveEvent".}
proc fcQDateEdit_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_leaveEvent".}
proc fQDateEdit_virtualbase_moveEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_moveEvent".}
proc fcQDateEdit_override_virtual_moveEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_moveEvent".}
proc fQDateEdit_virtualbase_tabletEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_tabletEvent".}
proc fcQDateEdit_override_virtual_tabletEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_tabletEvent".}
proc fQDateEdit_virtualbase_actionEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_actionEvent".}
proc fcQDateEdit_override_virtual_actionEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_actionEvent".}
proc fQDateEdit_virtualbase_dragEnterEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_dragEnterEvent".}
proc fcQDateEdit_override_virtual_dragEnterEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_dragEnterEvent".}
proc fQDateEdit_virtualbase_dragMoveEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_dragMoveEvent".}
proc fcQDateEdit_override_virtual_dragMoveEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_dragMoveEvent".}
proc fQDateEdit_virtualbase_dragLeaveEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_dragLeaveEvent".}
proc fcQDateEdit_override_virtual_dragLeaveEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_dragLeaveEvent".}
proc fQDateEdit_virtualbase_dropEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_dropEvent".}
proc fcQDateEdit_override_virtual_dropEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_dropEvent".}
proc fQDateEdit_virtualbase_nativeEvent(self: pointer, eventType: struct_miqt_string, message: pointer, resultVal: ptr uint): bool{.importc: "QDateEdit_virtualbase_nativeEvent".}
proc fcQDateEdit_override_virtual_nativeEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_nativeEvent".}
proc fQDateEdit_virtualbase_metric(self: pointer, param1: cint): cint{.importc: "QDateEdit_virtualbase_metric".}
proc fcQDateEdit_override_virtual_metric(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_metric".}
proc fQDateEdit_virtualbase_initPainter(self: pointer, painter: pointer): void{.importc: "QDateEdit_virtualbase_initPainter".}
proc fcQDateEdit_override_virtual_initPainter(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_initPainter".}
proc fQDateEdit_virtualbase_redirected(self: pointer, offset: pointer): pointer{.importc: "QDateEdit_virtualbase_redirected".}
proc fcQDateEdit_override_virtual_redirected(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_redirected".}
proc fQDateEdit_virtualbase_sharedPainter(self: pointer, ): pointer{.importc: "QDateEdit_virtualbase_sharedPainter".}
proc fcQDateEdit_override_virtual_sharedPainter(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_sharedPainter".}
proc fQDateEdit_virtualbase_inputMethodEvent(self: pointer, param1: pointer): void{.importc: "QDateEdit_virtualbase_inputMethodEvent".}
proc fcQDateEdit_override_virtual_inputMethodEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_inputMethodEvent".}
proc fQDateEdit_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool{.importc: "QDateEdit_virtualbase_eventFilter".}
proc fcQDateEdit_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_eventFilter".}
proc fQDateEdit_virtualbase_childEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_childEvent".}
proc fcQDateEdit_override_virtual_childEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_childEvent".}
proc fQDateEdit_virtualbase_customEvent(self: pointer, event: pointer): void{.importc: "QDateEdit_virtualbase_customEvent".}
proc fcQDateEdit_override_virtual_customEvent(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_customEvent".}
proc fQDateEdit_virtualbase_connectNotify(self: pointer, signal: pointer): void{.importc: "QDateEdit_virtualbase_connectNotify".}
proc fcQDateEdit_override_virtual_connectNotify(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_connectNotify".}
proc fQDateEdit_virtualbase_disconnectNotify(self: pointer, signal: pointer): void{.importc: "QDateEdit_virtualbase_disconnectNotify".}
proc fcQDateEdit_override_virtual_disconnectNotify(self: pointer, slot: int) {.importc: "QDateEdit_override_virtual_disconnectNotify".}
proc fcQDateEdit_staticMetaObject(): pointer {.importc: "QDateEdit_staticMetaObject".}
proc fcQDateEdit_delete(self: pointer) {.importc: "QDateEdit_delete".}


func init*(T: type QDateTimeEdit, h: ptr cQDateTimeEdit): QDateTimeEdit =
  T(h: h)
proc create*(T: type QDateTimeEdit, parent: gen_qwidget.QWidget): QDateTimeEdit =

  QDateTimeEdit.init(fcQDateTimeEdit_new(parent.h))
proc create*(T: type QDateTimeEdit, ): QDateTimeEdit =

  QDateTimeEdit.init(fcQDateTimeEdit_new2())
proc create2*(T: type QDateTimeEdit, dt: gen_qdatetime.QDateTime): QDateTimeEdit =

  QDateTimeEdit.init(fcQDateTimeEdit_new3(dt.h))
proc create2*(T: type QDateTimeEdit, d: gen_qdatetime.QDate): QDateTimeEdit =

  QDateTimeEdit.init(fcQDateTimeEdit_new4(d.h))
proc create2*(T: type QDateTimeEdit, t: gen_qdatetime.QTime): QDateTimeEdit =

  QDateTimeEdit.init(fcQDateTimeEdit_new5(t.h))
proc create*(T: type QDateTimeEdit, dt: gen_qdatetime.QDateTime, parent: gen_qwidget.QWidget): QDateTimeEdit =

  QDateTimeEdit.init(fcQDateTimeEdit_new6(dt.h, parent.h))
proc create2*(T: type QDateTimeEdit, d: gen_qdatetime.QDate, parent: gen_qwidget.QWidget): QDateTimeEdit =

  QDateTimeEdit.init(fcQDateTimeEdit_new7(d.h, parent.h))
proc create2*(T: type QDateTimeEdit, t: gen_qdatetime.QTime, parent: gen_qwidget.QWidget): QDateTimeEdit =

  QDateTimeEdit.init(fcQDateTimeEdit_new8(t.h, parent.h))
proc metaObject*(self: QDateTimeEdit, ): gen_qobjectdefs.QMetaObject =

  gen_qobjectdefs.QMetaObject(h: fcQDateTimeEdit_metaObject(self.h))

proc metacast*(self: QDateTimeEdit, param1: cstring): pointer =

  fcQDateTimeEdit_metacast(self.h, param1)

proc metacall*(self: QDateTimeEdit, param1: gen_qobjectdefs.QMetaObjectCall, param2: cint, param3: pointer): cint =

  fcQDateTimeEdit_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type QDateTimeEdit, s: cstring): string =

  let v_ms = fcQDateTimeEdit_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc dateTime*(self: QDateTimeEdit, ): gen_qdatetime.QDateTime =

  gen_qdatetime.QDateTime(h: fcQDateTimeEdit_dateTime(self.h))

proc date*(self: QDateTimeEdit, ): gen_qdatetime.QDate =

  gen_qdatetime.QDate(h: fcQDateTimeEdit_date(self.h))

proc time*(self: QDateTimeEdit, ): gen_qdatetime.QTime =

  gen_qdatetime.QTime(h: fcQDateTimeEdit_time(self.h))

proc calendar*(self: QDateTimeEdit, ): gen_qcalendar.QCalendar =

  gen_qcalendar.QCalendar(h: fcQDateTimeEdit_calendar(self.h))

proc setCalendar*(self: QDateTimeEdit, calendar: gen_qcalendar.QCalendar): void =

  fcQDateTimeEdit_setCalendar(self.h, calendar.h)

proc minimumDateTime*(self: QDateTimeEdit, ): gen_qdatetime.QDateTime =

  gen_qdatetime.QDateTime(h: fcQDateTimeEdit_minimumDateTime(self.h))

proc clearMinimumDateTime*(self: QDateTimeEdit, ): void =

  fcQDateTimeEdit_clearMinimumDateTime(self.h)

proc setMinimumDateTime*(self: QDateTimeEdit, dt: gen_qdatetime.QDateTime): void =

  fcQDateTimeEdit_setMinimumDateTime(self.h, dt.h)

proc maximumDateTime*(self: QDateTimeEdit, ): gen_qdatetime.QDateTime =

  gen_qdatetime.QDateTime(h: fcQDateTimeEdit_maximumDateTime(self.h))

proc clearMaximumDateTime*(self: QDateTimeEdit, ): void =

  fcQDateTimeEdit_clearMaximumDateTime(self.h)

proc setMaximumDateTime*(self: QDateTimeEdit, dt: gen_qdatetime.QDateTime): void =

  fcQDateTimeEdit_setMaximumDateTime(self.h, dt.h)

proc setDateTimeRange*(self: QDateTimeEdit, min: gen_qdatetime.QDateTime, max: gen_qdatetime.QDateTime): void =

  fcQDateTimeEdit_setDateTimeRange(self.h, min.h, max.h)

proc minimumDate*(self: QDateTimeEdit, ): gen_qdatetime.QDate =

  gen_qdatetime.QDate(h: fcQDateTimeEdit_minimumDate(self.h))

proc setMinimumDate*(self: QDateTimeEdit, min: gen_qdatetime.QDate): void =

  fcQDateTimeEdit_setMinimumDate(self.h, min.h)

proc clearMinimumDate*(self: QDateTimeEdit, ): void =

  fcQDateTimeEdit_clearMinimumDate(self.h)

proc maximumDate*(self: QDateTimeEdit, ): gen_qdatetime.QDate =

  gen_qdatetime.QDate(h: fcQDateTimeEdit_maximumDate(self.h))

proc setMaximumDate*(self: QDateTimeEdit, max: gen_qdatetime.QDate): void =

  fcQDateTimeEdit_setMaximumDate(self.h, max.h)

proc clearMaximumDate*(self: QDateTimeEdit, ): void =

  fcQDateTimeEdit_clearMaximumDate(self.h)
